Add topPanel and websiteListPanel to Gui class

--- a/todo
+++ b/todo
@@ -8,6 +8,7 @@ Inputs consist of
 Name/Website: github.com
 Username/email: neefs
 Password (encrypted): supersecurepassword123
+Notes: 
 
 websites could be listed on a left bar and when you click it highlights and brings up the info to the right
 + button top right to make new inputs
